    * Replace sweave package vignette with Rmd for easier user interaction.
      Less effort should be needed to maintain the vignette due to simpler
      syntax, and fewer obtuse LaTeX errors.
    * Disable default plotting of getTxDensity().  Only functions whose names
      start with 'plot' automatically generate plots.
    * getTxDensity() is faster and returns exact values instead of trapezoidal
      approximation.
    * windowAnalysis() now has no upper limit on stepSize.

BUG FIXES AND IMPROVEMENTS

    * Fix windowAnalysis() "subscript out of bounds" error, and add corner case
      of empty ranges.
    * Fix corner cases of breakTranscriptsOnGenes() and combineTranscripts()
      failing when no break or join errors are detected.
    * Fix polymeraseWave processing genes beyond chromosome boundaries.
    * Fix makeConsensusAnnotations not correctly validating presence of gene_id
      column.
    * One can now control makeConsensusAnnotations() multi-core parallelism.
      Remove the hard coded 10 CPU cores.
    * Move all packages from Depends to Imports to fix Travis-CI bootstrap
      errors.
    * Add unit test suite using testthat:
      - All bugs discovered since version 1.7.0 now have corresponding
        regression tests.
      - Add lintr in unit tests to preserve code style.
    * New maintainer in response to dead upstream.
    * Add contributor instructions in README.
    * Add GitHub continuous integration using Travis-CI, covr, and codecov.
    * Fix R check errors, warnings and notes:
      - Fix RgammaMLE() namespace collision between R and C functions by
        renaming C function to Rgamma().
      - Add useDynamicSymbols removed by a previous maintainer in Bioconductor
        3.0.
    * Fix BiocCheck errors, warnings and notes:
      - Drop use of <<- from writeWriggle()
      - Indent at multiples of 4 spaces.
      - Wrap lines at 80 columns.


;; Local Variables:
;; mode: org
;; End: